# ailiga

./: .buildinfo  .gitignore  .readthedocs.yml  Makefile  README.md  dqn.pth  dqn_agent.pth  dqn_agent_tictactoe_v3.pth  genindex.html  objects.inv  pyproject.toml  pytest.ini  season.sh
_autosummary/: ailiga.all_fighters.get_fighter_by_name.html  ailiga.battle.Battle.html  ailiga.battle.html  ailiga.env.get_all_env_names.html  ailiga.env.knights_archers_zombies_v10.html  ailiga.env.rps_v2.html  ailiga.env.tictactoe_v3.html  ailiga.fighter.Fighter.html  ailiga.html  ailiga.tournament.html  ailiga.tournament.main.html  ailiga.train.html  ailiga.train.train.html  ailiga.trained_fighter.TrainedFighter.html  ailiga.trained_fighter.html
_modules/: index.html
_modules/ailiga/: all_fighters.html  battle.html  fighter.html  season.html  tournament.html  train.html  trained_fighter.html
_sources/_autosummary/: ailiga.all_fighters.get_all_fighters.rst.txt  ailiga.env.get_all_env_names.rst.txt  (+11 more)
ailiga/: Arena.py  Fighter.py  TrainedFighter.py  agent.py  all_fighters.py  arena.py  battle.py  env.py  fighter.py  season.py  tournament.py  train.py  trained_fighter.py
debug/: test_dqn_fighter.py  test_drdqn_fighter.py  test_knights_archers_zombies_v10.py  test_ppo_fighter.py  test_random_fighter.py  test_simple_spread_v2.py  test_tianshou.py  test_train_all.py
season/: 2023_01.html
test/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
tests/: test_arena.py  test_battle.py  test_cleanrl.py  test_dqn_fighter.py  test_drdqn_fighter.py  test_env.py  test_fighter.py  test_ppo_fighter.py  test_random_fighter.py  test_season.py  test_stable_baselines3.py  test_tiktactoe.py  test_tournament.py  test_tutorial.py
tournaments/: knights_archers_zombies_v10.html  leduc_holdem_v4.html  simple_spread_v2.html
trained/: DQNFigher_v0.pth  PPOFighter_v0.pth
(+253 files in other folders)
