[tool.poetry]
name = "ailiga"
version = "0.1.0"
description = ""
authors = ["Alexander Puck Neuwirth <alexander@neuwirth-informatik.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
SuperSuit = "3.6.0"
torch = "1.12.1"
PettingZoo = "1.22.0"
tqdm = "*"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
