[tool.poetry]
name = "ailiga"
version = "0.1.0"
description = ""
authors = ["Alexander Puck Neuwirth <alexander@neuwirth-informatik.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
SuperSuit = "*"
torch = "1.12.1"
PettingZoo = "*"
tqdm = "*"
stable-baselines3 = {git ="https://github.com/carlosluis/stable-baselines3.git", branch="fix_tests", extras= ["extra"]}
#stable-baselines3 = {version="1.5.0", extras= ["extra"]}
pyglet = "1.5.27"
#gym = ">0.24"
#gym = "*"
cfg_load  = "*"
#open_spiel = "*"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
