[tool.poetry]
name = "ailiga"
version = "0.1.0"
description = ""
authors = ["Alexander Puck Neuwirth <alexander@neuwirth-informatik.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
SuperSuit = "2.6.6"
#torch = "1.9.0"
PettingZoo = "1.9.0"
tqdm = "*"
#stable-baselines3 = {git ="https://github.com/carlosluis/stable-baselines3.git", branch="fix_tests", extras= ["extra"]}
stable-baselines3 = "1.6.2"
pyglet = "1.5.27"
gym = "<=0.21"
gymnasium = "<0.0.2"
#gym = "*"
cfg_load  = "*"
#open_spiel = "*"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
